--- a/LocationAddress/kotlin/app/build.gradle
+++ b/LocationAddress/kotlin/app/build.gradle
@@ -19,7 +19,7 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 27
-
+    buildToolsVersion '27.0.2'
     defaultConfig {
         applicationId "com.google.android.gms.location.sample.locationaddress"
         minSdkVersion 16
@@ -37,8 +37,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.0.2'
-    implementation 'com.android.support:design:27.0.2'
-    implementation 'com.google.android.gms:play-services-location:11.8.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    compile 'com.android.support:appcompat-v7:27.0.2'
+    compile 'com.android.support:design:27.0.2'
+    compile 'com.google.android.gms:play-services-location:11.8.0'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.21"
 }
